<!--
  ~ This file is part of INU Cafeteria.
  ~
  ~ Copyright (C) 2020 INU Global App Center <potados99@gmail.com>
  ~
  ~ INU Cafeteria is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ INU Cafeteria is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="app_name">Cafeteria</string>
    <string name="menu_app_info">App Info</string>
    <string name="menu_logout">Sign out</string>
    <string name="desc_logo">This is a logo of this application.</string>
    <string name="desc_close_drawer">Close drawer</string>
    <string name="desc_open_drawer">Open drawer</string>
    <string name="title_student_barcode">TAG</string>
    <string name="warn_internet">Please check the internet.</string>
    <string name="desc_student_barcode">This is a student tag.</string>
    <string name="desc_for_the_discount">For the discount at dining halls in dormitory and the college of education.</string>
    <string name="fail_server">Could not communicate with server.</string>
    <string name="fail_response">Server request failed.</string>
    <string name="fail_unexpected">Unexpected error occurd.</string>
    <string name="dialog_new_version">New Version %s</string>
    <string name="dialog_ask_update">New version is available. Do you want to update?</string>
    <string name="button_update">Update</string>
    <string name="button_cancel">Cancel</string>
    <string name="desc_app_description">INU cafeteria</string>
    <string name="title_server_error">Server Error</string>
    <string name="dialog_server_not_respond">Server is not responding. It could be due to the network. Please try again later.</string>
    <string name="button_exit">Exit</string>
    <string name="hint_id">Student ID</string>
    <string name="hint_password">Password</string>
    <string name="check_auto_login">Keep me logged in</string>
    <string name="button_login">Sign in</string>
    <string name="button_no_user_login">Without account</string>
    <string name="fail_wrong_auth">Please check your ID and password.</string>
    <string name="fail_token_invalid">Please sign in again.</string>
    <string name="fail_no_barcode">No tag information.</string>
    <string name="ask_not_inu">Not a member?</string>
    <string name="desc_login_to_see_tag">This feature requires student information. You can login to proceed.</string>
    <string name="fail_response_body_null">Response body is empty.</string>
    <string name="fail_body_parse">Failed while parsing response body.</string>
    <string name="fail_no_data_for_key">Failed to get data. No data for the key.</string>

    <!-- Animations -->
    <string name="cafeteria_transition_image" translatable="false">cafeteriaImageTransition</string>
    <string name="cafeteria_transition_title" translatable="false">cafeteriaTitleTransition</string>

    <string name="title_logout">Sign out</string>
    <string name="dialog_ask_logout">Do you want to sign out?</string>
    <string name="button_logout">Logout</string>
    <string name="title_no_menu">No menu found for today.</string>
    <string name="desc_no_menu">This cafeteria might not offer the menu.\nOr it could be a temporal problem.\nPlease try again later.</string>
    <string name="desc_cafeteria_image">This is a cafeteria title image.</string>
    <string name="desc_cancel_button">This is a cancel button.</string>
    <string name="desc_menu_data">Food menu is offered by UICOOP. Might be inaccurate.</string>
    <string name="desc_no_data">No data available.</string>
    <string name="desc_pass_this_version">Pass this version</string>
    <string name="title_authors">Authors</string>
    <string name="desc_license">This software is released under %1$s. You can get a copy of full source code at %2$s. If you hav any question, please contact %3$s.</string>
    <string name="title_open_source_licenses">Open Source Licenses</string>
    <string name="current_version">Current Version: %s</string>
    <string name="latest_version">Latest Version: %s</string>
    <string name="latest_version_error">Could not find latest version.</string>
    <string name="phase">Phase %d</string>
    <string name="title_unexpected_error">Unexpected Error</string>
    <string name="title_fatal_error">Fatal Error</string>
    <string name="button_retry">Retry</string>
    <string name="menu_login">Sign in</string>
    <string name="button_confirm">Confirm</string>
    <string name="desc_dont_show_again">Don\'t show again</string>
    <string name="desc_more_button">More button</string>
    <string name="desc_single_squircle">An icon consisting of one image.</string>
    <string name="desc_double_squircle">An icon consisting of two images.</string>
    <string name="desc_triple_squircle">An icon consisting of three images.</string>
    <string name="notify_press_again_to_exit">Press again to exit app.</string>
    <string name="title_menus">Menus</string>
    <string name="title_discount">Discount</string>
    <string name="item_today">Today</string>
    <string name="item_today2">Tomorrow</string>
    <string name="item_today3">Today+2</string>
    <string name="item_today4">Today+3</string>
    <string name="item_today5">Today+4</string>
    <string name="title_reorder">Reorder</string>
    <string name="title_login">Sign in</string>
    <string name="action_reset">Reset</string>
    <string name="no_information">No information</string>
    <string name="no_information_on_this_cafeteria">No information available for this cafeteria.</string>
    <string name="unit_krw">%,dKRW</string>
    <string name="unit_cal" translatable="false">%,dkcal</string>
    <string name="desc_handle">This is a handle.</string>
    <string name="desc_help">Help!</string>
    <string name="middle_dot" translatable="false">·</string>면
    <string name="title_uicoop">UICOOP</string>
    <string name="title_student_id">STUDENT ID</string>
    <string name="title_available_at">AVAILABLE AT</string>
    <string name="login_prompt_title">Student Discount</string>
    <string name="login_prompt_subtitle">You can get a discount. Sign in to proceed.</string>
    <string name="error_check_login_form">Please check your id and password.</string>
    <string name="error_login_fail">Please check your id and password. Or try again later.</string>
    <string name="barcode_ratio" translatable="false">2.75</string>
    <string name="discount_notice">제1 기숙사 식당, 사범대 식당, 학생식당에서 사용하실 수 있습니다. 할인 제공 여부와 시점은 식당 사정에 따라 달라질 수 있습니다.</string>
    <string name="description_offline">You\'re not connected to the internet. We will keep trying to reconnect you.</string>
    <string name="egg_wow">Wow!</string>
    <string name="egg_help">HELP!</string>
    <string name="egg_upup">....!!</string>
    <string name="egg_gmg">HAUP-HAUP</string>
    <string name="heart" translatable="false">❤</string>
    <string name="title_feedback">Feedback</string>
    <string name="wait">Hey..!</string>
    <string name="description_updated_needed">You need to update this application! You will be connected to Play Store after you click Update.</string>
    <string name="title_support">Support</string>
    <string name="title_inu_appcenter">INU Appcenter</string>
    <string name="button_kakaotalk">KakaoTalk Chat</string>
    <string name="title_faq">FAQ</string>
    <string name="title_ask">Ask</string>
    <string name="title_questions">My questions</string>
    <string name="title_service_manual">Service manual</string>
    <string name="hint_ask_anything">Feel free to ask anything :)</string>
    <string name="button_ask">Send</string>
    <string name="notify_ask_succeeded">Submit succeeded</string>
    <string name="description_on_ask">You might be replied in 72 hours.</string>
    <string name="description_app_version">App version: %s</string>
    <string name="title_question">Question</string>
    <string name="desc_reply">Reply icon</string>
    <string name="no_questions">No history</string>
    <string name="button_call_uicoop">Call UICOOP</string>
    <string name="description_answered">replied</string>
    <string name="description_not_answered">waiting</string>
    <string name="title_notice">Notices</string>
    <string name="no_notices">No notices</string>
    <string name="fail_no_activity">No activity to handle request. Please check if that app is installed.</string>
    <string name="push_number_notification_channel_id" translatable="false">99</string>
    <string name="push_number_notification_channel_name">Order ready</string>
    <string name="push_number_notification_channel_description">Delivers notification when order is ready</string>
    <string name="title_order">Orders</string>
    <string name="description_close_button">This is a close button</string>
    <string name="description_shadow">This is a shadow</string>
    <string name="description_corner">This is a focus corner.</string>
    <string name="title_scan">Scan</string>
    <string name="description_scan_your_ticket">Place your ticket inside the frame.</string>
    <string name="camera_frame_ratio" translatable="false">0.8</string>
    <string name="description_number_input_button">This is a number input button</string>
    <string name="description_enter_your_number">Please enter your number.</string>
    <string name="hint_enter_number">Enter your waiting number</string>
    <string name="title_where_are_you_at">Where are you at?</string>
    <string name="fail_fcm_token_not_found">Sorry, something is missing.</string>
    <string name="fail_that_order_does_not_exist">The order you requested deos not exist.</string>
    <string name="fail_server_internal">Server\'s in trouble.</string>
    <string name="fail_wrong_request">Request has a problem.</string>
    <string name="fail_that_order_already_exists">The order you requeested is already registered.</string>
    <string name="button_add_order">Add order</string>
    <string name="no_orders">No waiting orders yet :)</string>
    <string name="privacy_notion">Your data are sent encrypted and safely handled only for purpose of checking your availability for this service.</string>
    <string name="terms_and_conditions"><u>Terms and conditions</u></string>
    <string name="title_order_ready">Your order is ready!</string>
    <string name="description_order_ready">Yap.</string>
    <string name="order_status_done">Ready</string>
    <string name="order_status_waiting">Waiting</string>
    <string name="hint_sorting_cafeteria">Reorder!</string>
    <string name="hint_toggle_brightness">Make it bright!</string>
    <string name="sorry_to_be_offline">Sorry, we can do nothing within offline mode :(</string>
    <string name="title_discount_service_description">Discount for students</string>
    <string name="description_discount_service">Discount supported on %s.</string>
    <string name="desc_announcement">This is an announcement</string>
    <string name="egg_lightning">Buzzzzzzz!</string>
    <string name="title_thank_you_for_attention">Thanks!</string>
    <string name="description_let_me_know_what_to_do">Let me know what to improve.</string>
    <string name="button_send">Send</string>
    <string name="title_do_you_love_potato">Do you like potato?</string>
    <string name="description_have_a_good_day">Have a good day :)\n\nINU Cafeteria\n© potados99</string>
    <string name="button_close">Close</string>
</resources>
