<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This file is part of INU Cafeteria.
  ~
  ~ Copyright (C) 2020 INU Global App Center <potados99@gmail.com>
  ~
  ~ INU Cafeteria is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ INU Cafeteria is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.tabs.TabLayout
        style="@style/TabLayout"
        android:id="@+id/date_selector">

        <com.google.android.material.tabs.TabItem
            style="@style/FitSizedView"
            android:id="@+id/date_slot_0"
            android:text="@string/item_today" />

        <com.google.android.material.tabs.TabItem
            style="@style/FitSizedView"
            android:id="@+id/date_slot_1"
            android:text="@string/item_today2" />

        <com.google.android.material.tabs.TabItem
            style="@style/FitSizedView"
            android:id="@+id/date_slot_2"
            android:text="@string/item_today3" />

        <com.google.android.material.tabs.TabItem
            style="@style/FitSizedView"
            android:id="@+id/date_slot_3"
            android:text="@string/item_today4" />

        <com.google.android.material.tabs.TabItem
            style="@style/FitSizedView"
            android:id="@+id/date_slot_4"
            android:text="@string/item_today5" />

    </com.google.android.material.tabs.TabLayout>

</layout>
