<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_animation" >

    <!-- Login UI -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/desc_logo"
            android:src="@drawable/img_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/student_id"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:hint="@string/hint_stuno"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="@+id/logo"
            app:layout_constraintStart_toStartOf="@+id/logo"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <EditText
            android:id="@+id/password"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/logo"
            app:layout_constraintStart_toStartOf="@+id/logo"
            app:layout_constraintTop_toBottomOf="@+id/student_id" />

        <CheckBox
            android:id="@+id/autologin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:buttonTint="@android:color/white"
            android:checked="true"
            app:layout_constraintEnd_toStartOf="@+id/keep_logged_in"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <TextView
            android:id="@+id/keep_logged_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_auto_login"
            android:textColor="#FFFFFF"
            android:textSize="13sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/autologin"
            app:layout_constraintEnd_toEndOf="@+id/password" />

        <Button
            android:id="@+id/login"
            android:textColor="?android:attr/textColorPrimaryInverse"
            android:textSize="@dimen/textToolbar"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:background="@drawable/rounded_rectangle_outline_3dp"
            android:text="@string/button_login"
            app:layout_constraintEnd_toEndOf="@+id/logo"
            app:layout_constraintStart_toStartOf="@+id/logo"
            app:layout_constraintTop_toBottomOf="@+id/autologin" />

        <TextView
            android:id="@+id/not_a_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/ask_not_inu"
            android:textColor="?android:attr/textColorPrimaryInverse"
            android:textSize="@dimen/textSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login" />

        <TextView
            android:id="@+id/no_user_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/button_no_user_login"
            android:textColor="?android:attr/textColorPrimaryInverse"
            android:textSize="@dimen/textPrimary"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/not_a_member" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Loading -->
    <FrameLayout
        android:visibility="gone"
        android:id="@+id/loading_layout"
        android:background="@color/dimmedBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:indeterminate="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </FrameLayout>

</FrameLayout>