<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This file is part of INU Cafeteria.
  ~
  ~ Copyright (C) 2020 INU Global App Center <potados99@gmail.com>
  ~
  ~ INU Cafeteria is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ INU Cafeteria is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="vm"
            type="com.inu.cafeteria.feature.discount.DiscountViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="@{vm.onceLoggedIn ? View.GONE : View.VISIBLE}"
        tools:visibility="visible">

        <!-- Prompt title -->
        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="@dimen/far_space"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/subtitle"
            android:text="@string/login_prompt_title"
            android:textSize="@dimen/textBig"
            android:textColor="@color/textPrimary"
            android:textStyle="bold"/>

        <!-- Prompt subtitle -->
        <TextView
            android:id="@+id/subtitle"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/far_space"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/login_button"
            android:text="@string/login_prompt_subtitle"
            android:textSize="@dimen/textPrimary"
            android:textColor="@color/textSecondary"/>

        <!-- Login button -->
        <Button
            style="@style/HorizontallyFullSizedViewConstrained"
            android:id="@+id/login_button"
            android:layout_margin="@dimen/near_space"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/button_login"
            android:onClick="@{v -> vm.onClickLogin()}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>